--- a/_assets/scss/_subscribe.scss
+++ b/_assets/scss/_subscribe.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/**
 Subscribe
-========================================================================== */
+*/
 
 .subscribe {
   background: url('../img/plants-bg.jpg') no-repeat center center;
