--- a/_assets/scss/_swag.scss
+++ b/_assets/scss/_swag.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/**
 Swag
-========================================================================== */
+*/
 
 .swag {
   background: url('../img/keyboard-bg.jpg') no-repeat center center;
