--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -1,40 +1,37 @@
-/* ==========================================================================
+/**
 Footer
-========================================================================== */
-
-footer a {
-  color: #a1a9b0;
-}
+*/
 
 footer {
   background-color: #242830;
   padding: 40px 0 30px;
 }
 
+footer a {
+  color: #a1a9b0;
+}
+
 footer p {
   color: #fff;
 }
 
-ul.legals {
+.legals {
   color: #fff;
   line-height: 25px;
   list-style: none;
-}
-
-ul.legals li {
-  display: inline-block;
-}
-
-ul.legals li::after {
-  content: " |";
-}
-
-ul.legals li:last-child::after {
-  content: "";
-}
-
-.legals {
   text-align: left;
+}
+
+.legals li {
+  display: inline-block;
+
+  &::after {
+    content: " |";
+  }
+
+  &:last-child::after {
+    content: "";
+  }
 }
 
 .credit {
