--- a/_assets/scss/_intro.scss
+++ b/_assets/scss/_intro.scss
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/**
 Intro
-========================================================================== */
+*/
 
 .intro {
   background: #f3f5f8;
