--- a/_assets/scss/_posts.scss
+++ b/_assets/scss/_posts.scss
@@ -1,16 +1,18 @@
-/* ==========================================================================
+/**
 Posts
-========================================================================== */
+*/
 
 .posts {
   list-style: none;
   padding-left: 0;
+}
 
-  li {
-    margin-bottom: 20px;
-  }
+.post {
+  margin-bottom: 20px;
+}
 
-  p {
-    margin-top: 0;
-  }
+.post__date {}
+
+.post__title {
+  font-size: 2rem;
 }
