--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,14 @@
 <footer class="site-footer" role="contentinfo">
   <div class="container-fluid">
     <div class="row center-xs start-md">
-      <!-- <div class="col-md-6">
+      {% comment %}
+      <div class="col-md-6">
         <ul class="legals">
           <li><a href="#">Terms &amp; Conditions</a></li>
           <li><a href="#">Legals</a></li>
         </ul>
-      </div> -->
+      </div>
+      {% endcomment %}
 
       <div class="col-xs-12 col-md-6">
         {% include nav-social.html %}
