--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   {% endif %}
 </title>
 
-<link href="{{ site.base_url }}assets/css/main.min.css" rel="stylesheet">
+<link href="{{ site.base_url }}assets/css/main.css" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Varela+Round|Dosis:400,500,600,700|Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
 
 <link href="{{ site.BASE_PATH }}/{{ site.rss_path }}" rel="alternate" title="{{ site.title }} - {{ site.author }}" type="application/atom+xml" />
