--- a/_assets/css/partials/syntax.css
+++ b/_assets/css/partials/syntax.css
@@ -1,3 +1,5 @@
+/** Syntax */
+
 .highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic; } /* Comment */
 .highlight .err { background-color: #e3d2d2; color: #a61717; } /* Error */
