--- a/_assets/css/partials/badge.css
+++ b/_assets/css/partials/badge.css
@@ -1,3 +1,5 @@
+/** Badge */
+
 .badge {
   display: inline-block;
   min-width: 10px;
@@ -12,6 +14,7 @@
   background-color: #999;
   border-radius: 10px;
 }
+
 .badge:empty {
   display: none;
 }
