--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,9 +1,9 @@
 <section class="hero" id="hero">
   <div class="container-fluid">
-    <div class="row center-xs">
-      <div class="col-xs-12 col-md-8 text-center inner">
+    <div class="row center-xs middle-xs">
+      <div class="col-xs-12 col-md-8">
         <h1>NATHAN <span>JESSEN</span></h1>
-        <p>Front-end Architect specializing in CSS development and performance optimization.</p>
+        <h2 class="heading-underline">Front-end Architect</h2>
       </div>
     </div>
   </div>
