--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,33 +1,30 @@
 <section class="features text-center section-padding" id="features">
   <div class="container-fluid">
-    <h1 class="arrow">Love what you do, and you'll do it well</h1>
+    <h1 class="arrow">Specializations</h1>
 
     <div class="row features-wrapper">
       <div class="col-md-4 feature">
         <div class="icon">
           <i class="icon-laptop shadow"></i>
         </div>
-        <h2>Digital Design</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-        primis in faucibus.</p>
+        <h2 class="heading-underline">Responsive Web Design</h2>
+        <p>I build fully responsive, interactive web sites.</p>
       </div>
 
       <div class="col-md-4 feature">
         <div class="icon">
           <i class="icon-code shadow"></i>
         </div>
-        <h2>Web Development</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-        primis in faucibus.</p>
+        <h2 class="heading-underline">CSS Development</h2>
+        <p>My true passion is for CSS development and you can bet I have read all the latest CSS specifications and experimented with them.</p>
       </div>
 
       <div class="col-md-4 feature">
         <div class="icon">
           <i class="icon-heart shadow"></i>
         </div>
-        <h2>Creative Direction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum
-        primis in faucibus.</p>
+        <h2 class="heading-underline">Performance Audits</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem.</p>
       </div>
     </div>
   </div>
