--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,15 +1,15 @@
 <section class="latest-posts section-padding-small">
   <div class="container-fluid">
-    <h2 class="text-center">Posts</h2>
+    <h2 class="heading-underline text-center">Posts</h2>
 
     <ul class="posts">
       {% for post in site.posts %}
-      <li itemscope itemtype="http://schema.org/BlogPosting">
+      <li itemscope itemtype="http://schema.org/BlogPosting" class="post">
         <a href="{{ site.BASE_PATH }}{{ post.url }}" itemprop="url">
           <div class="p-wrap">
-            <time datetime="{{ post.date | date_to_xmlschema }}" class="date left-slide"
+            <time datetime="{{ post.date | date_to_xmlschema }}" class="post__date left-slide"
             itemprop="datePublished">{{ post.date | date_to_string }}</time>
-            <p itemprop="name headline" class="left-slide">{{ post.title }}</p>
+            <p itemprop="name headline" class="post__title left-slide">{{ post.title }}</p>
           </div>
         </a>
       </li>
