--- a/_assets/css/partials/misc.css
+++ b/_assets/css/partials/misc.css
@@ -1,6 +1,20 @@
-/**
-Misc
-*/
+/** Misc */
+
+.heading-underline {
+  color: #353535;
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+
+  &::after {
+    border: solid 2px #3dc9b3;
+    content: " ";
+    display: block;
+    margin: 25px auto;
+    width: 35px;
+  }
+}
+
 .section-padding {
   padding: 90px 0 100px
 }
@@ -9,38 +23,15 @@ Misc
   padding: 30px 0 50px;
 }
 
-.dark-bg {
-  background: #f3f5f8
+.swag {
+  background: url('../img/keyboard-bg.jpg') no-repeat center center;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 50px 0;
 }
 
-.light-bg {
-  background-color: #fff
-}
-
-.light-box {
-  background-color: #fff;
-  box-shadow: 0px 3px 0px 0px #f0f2f4;
-  padding: 20px 0;
-
-  &:hover,
-  &:focus {
-    box-shadow: 0px 3px 0px 0px #3dc9b3;
+@media screen and (max-width:1024px) {
+  .swag {
+    background-attachment: scroll;
   }
-}
-
-.box-hover {
-  transition: all 500ms ease-in-out;
-
-  &:hover,
-  &:focus {
-    transform: translate(0, -15px);
-  }
-}
-
-.wrapper {
-  height: 650px
-}
-
-.inner {
-  padding-top: 85px
 }
