--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -1,54 +1,34 @@
-/**
-Main CSS
-*/
 @charset "UTF-8";
 
-/**
-Vendor Libraries
-*/
-@import "partials/normalize.css";
-@import "partials/flexboxgrid.css";
+/** Vendor Libraries */
+@import "vendor/normalize.css";
+@import "vendor/flexboxgrid.css";
 
+/*! CSS Framework */
+@import "framework/root.css";
+@import "framework/base.css";
+@import "framework/links.css";
+@import "framework/buttons.css";
+@import "framework/headings.css";
+@import "framework/media.css";
+@import "framework/card.css";
+@import "framework/utilities.css";
 
-/*! Primary CSS file */
-/**
-Variables
-*/
-@import "partials/root.css";
-
-/**
-Components
-*/
+/*! Main CSS */
+/** Components */
 @import "partials/global.css";
-@import "partials/headings.css";
-@import "partials/misc.css";
-@import "partials/hero.css";
-@import "partials/header.css";
-@import "partials/intro.css";
-@import "partials/features.css";
-@import "partials/swag.css";
-@import "partials/portfolio.css";
-@import "partials/projects.css";
-@import "partials/thumbnail.css";
-@import "partials/card.css";
-@import "partials/badge.css";
-@import "partials/subscribe.css";
-@import "partials/cta.css";
-@import "partials/contact.css";
-@import "partials/footer.css";
-@import "partials/posts.css";
-@import "partials/queries.css";
-
-
-/**
-Theme
-*/
-@import "partials/highlights.css";
-@import "partials/syntax.css";
 @import "partials/animations.css";
+@import "partials/badge.css";
+@import "partials/contact.css";
+@import "partials/cta.css";
+@import "partials/features.css";
 @import "partials/fontello.css";
-
-/**
-Misc
-*/
-@import "partials/utilities.css";
+@import "partials/footer.css";
+@import "partials/header.css";
+@import "partials/hero.css";
+@import "partials/highlights.css";
+@import "partials/misc.css";
+@import "partials/posts.css";
+@import "partials/projects.css";
+@import "partials/syntax.css";
+@import "partials/theme.css";
