--- a/_assets/css/partials/contact.css
+++ b/_assets/css/partials/contact.css
@@ -1,32 +1,7 @@
-/**
-Contact
-*/
+/** Contact */
 
-.up-btn {
-  background: rgba(61, 201, 179, 0.5);
-  border-radius: 50%;
-  color: #fff;
-  display: block;
-  font-size: 18px;
-  height: 50px;
-  left: 0;
-  line-height: 46px;
-  margin: 0 auto;
-  position: absolute;
-  right: 0;
+.about-card {
   text-align: center;
-  top: -26px;
-  width: 50px;
-
-  &:hover,
-  &:focus {
-    background: rgba(61, 201, 179, 1);
-    color: #fff;
-  }
-}
-
-.contact-details {
-  margin-top: 70px;
 
   h2 {
     font-size: 20px;
@@ -42,28 +17,19 @@ Contact
   }
 }
 
-.contact-wrap {
-  position: relative;
-}
-
-.social-btn {
-  background: #242830;
-  border-radius: 50%;
-  color: #fff;
-  display: inline-block;
-  font-size: 17px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  width: 40px;
+.light-box {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0px 3px 0px 0px #f0f2f4;
+  padding: 20px;
+  transition: all 300ms ease-in-out;
 
   &:hover,
   &:focus {
-    background: #3dc9b3;
-    color: #fff;
+    box-shadow: 0px 3px 0px 0px #3dc9b3;
   }
-}
 
-.social {
-  margin-top: 25px
+  & + .light-box {
+    margin-top: 30px;
+  }
 }
