--- a/_assets/css/partials/global.css
+++ b/_assets/css/partials/global.css
@@ -1,19 +1,14 @@
-/**
-Global
-*/
+/** Global */
 
 @-ms-viewport {
   width: device-width;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+html, body {
+  height: 100%;
 }
 
 html {
-  box-sizing: border-box;
   font-size: 16px;
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: transparent;
@@ -25,28 +20,12 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #373a3c;
-  background-color: #fafafa;
-}
-
-a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-
-a:active,
-a:hover {
-  outline-width: 0;
 }
 
 abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   text-decoration: underline dotted;
-}
-
-b,
-strong {
-  font-weight: inherit;
 }
 
 b,
@@ -262,38 +241,6 @@ dd {
 
 blockquote {
   margin: 0 0 1rem;
-}
-
-a {
-  color: #0275d8;
-  text-decoration: none;
-  transition: all 0.5s;
-
-  &:focus,
-  &:hover {
-    color: #014c8c;
-    text-decoration: underline;
-  }
-
-  &:focus {
-    outline: 5px auto -webkit-focus-ring-color;
-    outline-offset: -2px;
-  }
-
-  &:not([href]):not([tabindex]) {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  &:not([href]):not([tabindex]):focus,
-  &:not([href]):not([tabindex]):hover {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  &:not([href]):not([tabindex]):focus {
-    outline: none;
-  }
 }
 
 pre {
