--- a/_assets/css/partials/hero.css
+++ b/_assets/css/partials/hero.css
@@ -1,25 +1,23 @@
-/**
-Hero
-*/
+/** Hero */
 
 .hero {
-  background: #000 url('../img/hero-bg.jpg') no-repeat center center;
-  background-size: cover;
-  box-sizing: border-box;
-  height: auto;
-  padding: 2rem 0 9rem 0;
-  width: 100%;
+  padding: 10rem 0;
 }
 
 .hero h1 {
   font-size: 2.5rem;
-  letter-spacing: 5px;
+  letter-spacing: 4px;
   margin-bottom: .625rem;
   margin-top: .625rem;
+
+  span {
+    color: #a1a9b0;
+  }
 }
 
-.hero h1 span {
-  color: #a1a9b0;
+.hero h2 {
+  font-size: 1rem;
+  letter-spacing: 2px;
 }
 
 .hero p {
