Remove old image assets and reference to them

--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,6 +1,6 @@
 <section class="features text-center section-padding" id="features">
   <div class="container-fluid">
-    <h1 class="arrow">Specializations</h1>
+    <h1>Specializations</h1>
 
     <div class="row features-wrapper">
       <div class="col-md-4 feature">
