--- a/_assets/css/partials/misc.css
+++ b/_assets/css/partials/misc.css
@@ -2,7 +2,7 @@
 
 .heading-underline {
   color: #353535;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
 
