Update theme color

--- a/_assets/css/framework/root.css
+++ b/_assets/css/framework/root.css
@@ -8,14 +8,14 @@
   --gray: #444;
   --gray-dark: #333;
 
-  --brand-primary: #22A7F0;
+  --brand-primary: #3494E6;
   --brand-secondary: #36D7B7;
 
   --body-bg: #fff;
 
   /* 2. Links */
-  --link-color: #0275d8;
-  --link-color-hover: #014c8c;
+  --link-color: #3494E6;
+  --link-color-hover: #004e92;
 
   /* Buttons */
   --button-bg: #ddd;
