--- a/_includes/features.html
+++ b/_includes/features.html
@@ -5,7 +5,7 @@
     <div class="row features-wrapper">
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="icon-laptop shadow"></i>
+          <i class="icon-laptop"></i>
         </div>
         <h2 class="heading-underline">Responsive Web Design</h2>
         <p>I build fully responsive, interactive web sites.</p>
@@ -13,7 +13,7 @@
 
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="icon-code shadow"></i>
+          <i class="icon-code"></i>
         </div>
         <h2 class="heading-underline">CSS Development</h2>
         <p>My true passion is for CSS development and you can bet I have read all the latest CSS specifications and experimented with them.</p>
@@ -21,7 +21,7 @@
 
       <div class="col-md-4 feature">
         <div class="icon">
-          <i class="icon-heart shadow"></i>
+          <i class="icon-heart"></i>
         </div>
         <h2 class="heading-underline">Performance Audits</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem.</p>
