--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,7 +3,7 @@
     <div class="row center-xs middle-xs">
       <div class="col-xs-12 col-md-8">
         <h1>NATHAN <span>JESSEN</span></h1>
-        <h2 class="heading-underline">Front-end Architect</h2>
+        <h2 class="h4">Front-end Architect</h2>
       </div>
     </div>
   </div>
