--- a/_assets/css/partials/contact.css
+++ b/_assets/css/partials/contact.css
@@ -8,7 +8,7 @@
   }
 
   h2 span {
-    color: #3dc9b3;
+    color: #3494E6;
     display: block;
     font-size: 14px;
     letter-spacing: 1px;
@@ -26,7 +26,7 @@
 
   &:hover,
   &:focus {
-    box-shadow: 0px 3px 0px 0px #3dc9b3;
+    box-shadow: 0px 3px 0px 0px #3494E6;
   }
 
   & + .light-box {
