Add list, margin, padding classes to framework

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -10,8 +10,11 @@
 @import "framework/links.css";
 @import "framework/buttons.css";
 @import "framework/headings.css";
+@import "framework/lists.css";
 @import "framework/media.css";
 @import "framework/card.css";
+@import "framework/margin.css";
+@import "framework/padding.css";
 @import "framework/utilities.css";
 
 /*! Main CSS */
