Fix nesting and clean up post styling
Fix nesting in files to match code guidelines.
Clean up feature and post styling

--- a/_assets/css/partials/badge.css
+++ b/_assets/css/partials/badge.css
@@ -13,8 +13,8 @@
   vertical-align: baseline;
   background-color: #999;
   border-radius: 10px;
-}
 
-.badge:empty {
-  display: none;
+  &:empty {
+    display: none;
+  }
 }
