--- a/_assets/css/partials/contact.css
+++ b/_assets/css/partials/contact.css
@@ -2,19 +2,19 @@
 
 .about-card {
   text-align: center;
+}
 
-  h2 {
-    font-size: 20px;
-  }
+.about-card h2 {
+  font-size: 20px;
+}
 
-  h2 span {
-    color: #3494E6;
-    display: block;
-    font-size: 14px;
-    letter-spacing: 1px;
-    margin-top: 15px;
-    text-transform: uppercase;
-  }
+.about-card h2 span {
+  color: #3494E6;
+  display: block;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-top: 15px;
+  text-transform: uppercase;
 }
 
 .light-box {
@@ -28,8 +28,8 @@
   &:focus {
     box-shadow: 0px 3px 0px 0px #3494E6;
   }
+}
 
-  & + .light-box {
-    margin-top: 30px;
-  }
+.light-box + .light-box {
+  margin-top: 30px;
 }
