--- a/_assets/css/partials/hero.css
+++ b/_assets/css/partials/hero.css
@@ -2,16 +2,22 @@
 
 .hero {
   padding: 10rem 0;
+  /*background: #3494E6;*/
+  /*background: radial-gradient(
+    circle at top,
+    #EC6EAD,
+    #3494E6
+  );*/
 }
 
 .hero h1 {
   letter-spacing: 4px;
+}
 
-  span {
-    color: #a1a9b0;
-  }
+.hero h1 span {
+  color: #a1a9b0;
 }
 
 .hero h2 {
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
