--- a/_includes/features.html
+++ b/_includes/features.html
@@ -4,7 +4,7 @@
 
     <div class="row features-wrapper">
       <div class="col-md-4 feature">
-        <div class="icon">
+        <div class="feature__icon">
           <i class="icon-laptop"></i>
         </div>
         <h2 class="heading-underline">Responsive Web Design</h2>
@@ -12,7 +12,7 @@
       </div>
 
       <div class="col-md-4 feature">
-        <div class="icon">
+        <div class="feature__icon">
           <i class="icon-code"></i>
         </div>
         <h2 class="heading-underline">CSS Development</h2>
@@ -20,7 +20,7 @@
       </div>
 
       <div class="col-md-4 feature">
-        <div class="icon">
+        <div class="feature__icon">
           <i class="icon-heart"></i>
         </div>
         <h2 class="heading-underline">Performance Audits</h2>
