--- a/_assets/css/framework/media.css
+++ b/_assets/css/framework/media.css
@@ -17,19 +17,21 @@ img {
 }
 
 .ratio-16-9 {
+  --media-height: 640px;
+  --media-width: 1280px;
   /*background: #ddd url(placeholder.svg) no-repeat center center;*/
-  padding-bottom: calc($height / width) * 100%;
+  padding-bottom: calc(var(--media-height) / var(--media-width)) * 100%;
   position: relative;
+}
 
-  img,
-  video,
-  iframe,
-  object,
-  embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
+.ratio-16-9 img,
+.ratio-16-9 video,
+.ratio-16-9 iframe,
+.ratio-16-9 object,
+.ratio-16-9 embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
