Clean up footer, headings, and hero bg

--- a/_assets/css/framework/root.css
+++ b/_assets/css/framework/root.css
@@ -3,7 +3,7 @@
 :root {
   /* 1. Colors */
   --white: #fff;
-  --white-off: #e0e0e0;
+  --white-off: #efefef;
   --gray-light: #f3f0f0;
   --gray: #444;
   --gray-dark: #333;
