--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -33,5 +33,6 @@
 @import "partials/misc.css";
 @import "partials/posts.css";
 @import "partials/projects.css";
+@import "partials/social.css";
 @import "partials/syntax.css";
 @import "partials/theme.css";
