--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <header class="header row center-xs start-md middle-xs">
     <hgroup class="header__hgroup col-xs-12 col-md-6">
       <a href="{{ site.BASE_PATH }}" title="Back to Homepage">
-        <h1 class="header__title">{{ site.title }}</h1>
+        <h1 class="header__title">NJ</h1>
       </a>
     </hgroup>
 
