--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,10 +1,10 @@
 <section class="hero" id="hero">
   <div class="container-fluid">
     <div class="row center-xs middle-xs">
-      <div class="col-xs-12 col-md-8">
-        <h1>NATHAN <span>JESSEN</span></h1>
-        <h2 class="h4">Front-end Architect</h2>
-      </div>
+      <hgroup class="col-xs-12 col-md-8">
+        <h1>NATHAN JESSEN</h1>
+        <h2 class="h3">Front-end Architect</h2>
+      </hgroup>
     </div>
   </div>
 </section>
