--- a/_assets/css/framework/lists.css
+++ b/_assets/css/framework/lists.css
@@ -4,3 +4,16 @@
   list-style: none;
   padding-left: 0;
 }
+
+.list-inline {
+  list-style: none;
+  padding-left: 0;
+}
+
+.list-inline > li {
+  display: inline-block;
+
+  &:not(:last-child)::after {
+    content: " |";
+  }
+}
