--- a/_assets/css/partials/misc.css
+++ b/_assets/css/partials/misc.css
@@ -16,22 +16,11 @@
 }
 
 .section-padding {
-  padding: 90px 0 100px
+  padding-top: 90px;
+  padding-bottom: 100px;
 }
 
 .section-padding-small {
-  padding: 30px 0 50px;
-}
-
-.swag {
-  background: url('../img/keyboard-bg.jpg') no-repeat center center;
-  background-attachment: fixed;
-  background-size: cover;
-  padding: 50px 0;
-}
-
-@media screen and (max-width:1024px) {
-  .swag {
-    background-attachment: scroll;
-  }
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
