--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,12 @@
 <footer class="site-footer" role="contentinfo">
   <div class="container-fluid">
     <div class="row center-xs start-md">
-      {% comment %}
-      <div class="col-md-6">
-        <ul class="legals">
-          <li><a href="#">Terms &amp; Conditions</a></li>
-          <li><a href="#">Legals</a></li>
-        </ul>
-      </div>
-      {% endcomment %}
-
       <div class="col-xs-12 col-md-6">
         {% include nav-social.html %}
       </div>
 
-      <div class="col-xs-12 col-md-6 credit">
-        <p>Powered by Jekyll - &copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
+      <div class="col-xs-12 col-md-6">
+        <p class="credit">Powered by Jekyll - &copy; {{ site.time | date: '%Y' }} {{ site.author }}</p>
       </div>
     </div>
   </div>
