--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,30 +1,28 @@
 <section class="features text-center section-padding" id="features">
   <div class="container-fluid">
-    <h1>Specializations</h1>
-
     <div class="row features-wrapper">
-      <div class="col-md-4 feature">
-        <div class="feature__icon">
-          <i class="icon-laptop"></i>
-        </div>
-        <h2 class="heading-underline">Responsive Web Design</h2>
-        <p>I build fully responsive, interactive web sites.</p>
-      </div>
-
       <div class="col-md-4 feature">
         <div class="feature__icon">
           <i class="icon-code"></i>
         </div>
-        <h2 class="heading-underline">CSS Development</h2>
-        <p>My true passion is for CSS development and you can bet I have read all the latest CSS specifications and experimented with them.</p>
+        <h2 class="heading-underline">Responsive Web Development</h2>
+        <p>Using a strong understanding of HTML, CSS, browser compatibility, and accessibility, I develop websites using a mobile first strategy to ensure they look beautiful and perform flawlessly for everyone on all devices.</p>
+      </div>
+
+      <div class="col-md-4 feature">
+        <div class="feature__icon">
+          <i class="icon-laptop"></i>
+        </div>
+        <h2 class="heading-underline">Performance Optimization</h2>
+        <p>Analyzing network utilization and page performance allows me to pinpoint bottlenecks in page load, performance, and jankiness. The findings of an analysis can be used as a roadmap to reduce bounce rates and drop-offs, improve user experience, and increase conversion rates.</p>
       </div>
 
       <div class="col-md-4 feature">
         <div class="feature__icon">
           <i class="icon-heart"></i>
         </div>
-        <h2 class="heading-underline">Performance Audits</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem.</p>
+        <h2 class="heading-underline">Speaking</h2>
+        <p>Attending and speaking at developer groups and conferences allows us all to share our knowledge and master our craft. Given my passion for CSS, I attempt to use every opportunity to share my love for the language.</p>
       </div>
     </div>
   </div>
