More theme updates

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -22,7 +22,7 @@
 @import "partials/global.css";
 @import "partials/animations.css";
 @import "partials/badge.css";
-@import "partials/contact.css";
+@import "partials/about.css";
 @import "partials/cta.css";
 @import "partials/features.css";
 @import "partials/fontello.css";
