--- a/_assets/css/partials/features.css
+++ b/_assets/css/partials/features.css
@@ -1,11 +1,7 @@
 /** Features */
 
 .features {
-  background-color: #efefef;
-}
-
-.features-wrapper {
-  margin-top: 70px;
+  background-color: #f4f4f4;
 }
 
 .feature__icon {
