--- a/_assets/css/partials/header.css
+++ b/_assets/css/partials/header.css
@@ -22,11 +22,8 @@
   margin-top: 0;
 }
 
-.top-nav {
-  a:hover,
-  a:focus {
-    text-decoration: none;
-  }
+.top-nav a {
+  margin-left: .75rem;
 }
 
 @media screen and (max-width:991px) {
