--- a/_assets/css/partials/misc.css
+++ b/_assets/css/partials/misc.css
@@ -1,7 +1,6 @@
 /** Misc */
 
 .heading-underline {
-  color: #3494E6;
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -16,11 +15,11 @@
 }
 
 .section-padding {
-  padding-top: 90px;
-  padding-bottom: 100px;
+  padding-top: 4rem;
+  padding-bottom: 5rem;
 }
 
 .section-padding-small {
-  padding-top: 30px;
-  padding-bottom: 50px;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
 }
