--- a/_assets/css/partials/social.css
+++ b/_assets/css/partials/social.css
@@ -1,13 +1,14 @@
 /** Social */
 
 .social-btn {
-  background: #000;
+  background: #222;
   border-radius: 50%;
   color: #fff;
   display: inline-block;
   font-size: 1rem;
   height: 40px;
   line-height: 40px;
+  margin-bottom: .5rem;
   text-align: center;
   width: 40px;
 
@@ -15,12 +16,5 @@
   &:focus {
     background: var(--brand-primary);
     color: #fff;
-  }
-}
-
-@media screen and (max-width:991px) {
-  .social-buttons {
-    margin-bottom: 10px;
-    text-align: center;
   }
 }
