--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,6 +1,6 @@
 <section class="latest-posts section-padding">
   <div class="container-fluid">
-    <h2 class="text-center">Posts</h2>
+    <h2 class="mb-30">Articles</h2>
 
     <ul class="posts list-unstyled">
       {% for post in site.posts %}
