--- a/_assets/css/framework/card.css
+++ b/_assets/css/framework/card.css
@@ -2,7 +2,7 @@
 
 .card {
   background-color: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid var(--border-color);
   margin-bottom: 20px;
 }
 
@@ -16,7 +16,7 @@
 
 .card-heading {
   background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid var(--border-color);
   color: #333;
   padding: 10px 15px;
 }
@@ -34,6 +34,17 @@
 
 .card-footer {
   background-color: #f5f5f5;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid var(--border-color);
   padding: 10px 15px;
+}
+
+/* Themes */
+.card-primary {
+  box-shadow: 0px 3px 0px 0px #f0f2f4;
+  transition: all 300ms ease-in-out;
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 0px 0px var(--brand-primary);
+  }
 }
