--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       </div>
 
       <div class="col-xs-12">
-        <p class="credit">&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
+        <p class="site-footer__credit">&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
       </div>
     </div>
   </div>
